configurando o swagger
