# controllers/passageiroController.go
@@ -22,10 +22,13 @@ type PassageiroController struct{}
 // ShowPassageiro godoc
 // @Summary Show a passageiro
 // @Description Retorna todos os passageiros cadastrados
+// @Tags Passageiro
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} models.Passageiro
-// @Failure 404 {string} string "ok"
+// @Success 200 {array} models.Passageiro
+// @Failure 400 {string} string "Requisição invalida"
+// @Failure 401 {string} string "Não autorizado"
+// @Failure 404 {string} string "Nenhum registro encontrado."
 // @Router /passageiro [get]
 func (PassageiroController) BuscarPassageiros(w http.ResponseWriter, r *http.Request) {
 
@@ -43,11 +46,14 @@ func (PassageiroController) BuscarPassageiros(w http.ResponseWriter, r *http.Req
 // ShowPassageiro godoc
 // @Summary Show a passageiro
 // @Description Retorna o passageiros cadastrado com base no idPassageiro passado
+// @Tags Passageiro
 // @Accept  json
 // @Produce  json
 // @Param idVoo path int true "IdPassageiro"
 // @Success 200 {object} models.Passageiro
-// @Failure 404 {string} string "ok"
+// @Failure 400 {string} string "Requisição invalida"
+// @Failure 401 {string} string "Não autorizado"
+// @Failure 404 {string} string "Nenhum registro encontrado."
 // @Router /passageiro/{idPassageiro} [get]
 func (PassageiroController) BuscarPassageiroPorId(w http.ResponseWriter, r *http.Request) {
 
@@ -71,19 +77,19 @@ func (PassageiroController) BuscarPassageiroPorId(w http.ResponseWriter, r *http
 		utils.RespondwithJSON(w, http.StatusOK, passageiro)
 	}
 
-	// adiciona como reposta o voo retornado
-	//json.NewEncoder(w).Encode(passageiro)
-
 }
 
 // ShowPassageiro godoc
 // @Summary Show a passageiro
 // @Description Metodo que cadastrar passageiro
+// @Tags Passageiro
 // @Accept  json
 // @Produce  json
-// @Param idPassageiro path int true "IdPassageiro"
-// @Success 200
-// @Failure 404 {string} string "ok"
+// @Param Passageiro body dtos.PassageiroDto true "Passageiro"
+// @Success 200 {string} string "Passageiro cadastrado"
+// @Failure 400 {string} string "Requisição invalida"
+// @Failure 401 {string} string "Não autorizado"
+// @Failure 404 {string} string "Nenhum registro encontrado."
 // @Router /passageiro [post]
 func (PassageiroController) CadastrarPassageiro(w http.ResponseWriter, r *http.Request) {
 	var passageiro dtos.PassageiroDto
@@ -92,7 +98,7 @@ func (PassageiroController) CadastrarPassageiro(w http.ResponseWriter, r *http.R
 	decoder := json.NewDecoder(r.Body)
 	err := decoder.Decode(&passageiro)
 	if err != nil {
-		utils.RespondwithJSON(w, http.StatusBadRequest, map[string]string{"message": "Passageiro não atualizado"})
+		utils.RespondwithJSON(w, http.StatusBadRequest, map[string]string{"message": "Passageiro não cadastrado"})
 	} else {
 		// serviço que cadastra o passageiro
 		_, err := passageiroService.CadastrarPassageiro(passageiro)
@@ -108,11 +114,14 @@ func (PassageiroController) CadastrarPassageiro(w http.ResponseWriter, r *http.R
 // ShowVoo godoc
 // @Summary Show a voo
 // @Description Metodo para atualizar um voo
+// @Tags Passageiro
 // @Accept  json
 // @Produce  json
-
-// @Success 200
-// @Failure 404 {string} string "ok"
+// @Param Passageiro body models.Passageiro true "Passageiro"
+// @Success 200 {string} string "Passageiro atualizado"
+// @Failure 400 {string} string "Requisição invalida"
+// @Failure 401 {string} string "Não autorizado"
+// @Failure 404 {string} string "Nenhum registro encontrado."
 // @Router /passageiro [put]
 func (PassageiroController) AtualizarPassageiro(w http.ResponseWriter, r *http.Request) {
 
@@ -135,14 +144,16 @@ func (PassageiroController) AtualizarPassageiro(w http.ResponseWriter, r *http.R
 
 }
 
-// ShowPassageiro godoc
-// @Summary Show a passageiro
-// @Description Metodo que realizar login
+// Show Passageiro godoc
+// @Summary realizar login
+// @Description verifica na base se existe as credenciais passadas, e retorna um token caso exista.
+// @Tags Auth
 // @Accept  json
 // @Produce  json
-
-// @Success 200
-// @Failure 404 {string} string "ok"
+// @Param Passageiro body dtos.CredenciaisDto true "Login"
+// @Success 200 {object} models.ResponseToken true
+// @Failure 400 {string} string "Requisição invalida"
+// @Failure 404 {string} string "Nenhum registro encontrado."
 // @Router /login [post]
 func (PassageiroController) RealizarLogin(w http.ResponseWriter, r *http.Request) {
 	var credenciaisDto dtos.CredenciaisDto
@@ -151,12 +162,6 @@ func (PassageiroController) RealizarLogin(w http.ResponseWriter, r *http.Request
 
 	// serviço que cadastra o passageiro
 	passageiro := passageiroService.BuscarPassageiroLogin(credenciaisDto)
-
-	// adiciona como reposta o voo retornado
-	//	json.NewEncoder(w).Encode(passageiro)
-	//	utils.RespondwithJSON(w, http.StatusCreated, map[string]string{"message": "Passageiro cadastrado"})
-
-	fmt.Println(credenciaisDto)
 
 	if credenciaisDto.Email == passageiro.Email && credenciaisDto.Senha == passageiro.Senha {
 
@@ -168,7 +173,7 @@ func (PassageiroController) RealizarLogin(w http.ResponseWriter, r *http.Request
 		result := models.ResponseToken{token}
 		jsonResult, err := json.Marshal(result)
 		if err != nil {
-			panic(err)
+			w.WriteHeader(http.StatusForbidden)
 		}
 
 		w.WriteHeader(http.StatusOK)
